优化pangu-cache-spring-boot-starter 增加分布式锁支持

--- a/pangu-examples/pangu-examples-lock-redis-based/src/main/resources/application-dev.properties
+++ b/pangu-examples/pangu-examples-lock-redis-based/src/main/resources/application-dev.properties
@@ -14,9 +14,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-spring.application.name=pangu-examples-cache-single
+spring.application.name=pangu-examples-lock-redis-based
 
-# spring-redis \u4E00\u7EA7\u7F13\u5B58
+# spring-redis
 spring.redis.host=localhost
 spring.redis.database=1
 spring.redis.port=6379
@@ -24,3 +24,4 @@ spring.redis.password=
 
 logging.level.root=INFO
 logging.level.com.gitee.pulanos.pangu=INFO
+logging.level.com.baomidou.lock=DEBUG
