--- a/pangu-examples/pangu-examples-lock-redis-based/src/main/resources/application.properties
+++ b/pangu-examples/pangu-examples-lock-redis-based/src/main/resources/application.properties
@@ -14,13 +14,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-spring.application.name=pangu-examples-cache-single
-
-# spring-redis \u4E00\u7EA7\u7F13\u5B58
-spring.redis.host=localhost
-spring.redis.database=1
-spring.redis.port=6379
-spring.redis.password=
-
-logging.level.root=INFO
-logging.level.com.gitee.pulanos.pangu=INFO
+spring.profiles.active=${spring.profiles.active:dev}
