--- a/pangu-cache-spring-boot-starter/pom.xml
+++ b/pangu-cache-spring-boot-starter/pom.xml
@@ -53,6 +53,10 @@
             <artifactId>layering-cache-starter</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>lock4j-redis-template-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
         </dependency>
