--- a/pangu-examples/pangu-examples-config-remote-nacos/src/main/resources/application.properties
+++ b/pangu-examples/pangu-examples-config-remote-nacos/src/main/resources/application.properties
@@ -23,6 +23,6 @@ nacos.config.auto-refresh=true
 nacos.config.namespace=${nacos.namespace:pangu-dev}
 nacos.config.server-addr=${nacos.server-addr:127.0.0.1:8848}
 nacos.config.type=properties
-nacos.config.data-id=${spring.application.name}.properties
+nacos.config.data-id=${spring.application.name}
 #nacos.config.type=yaml
 #nacos.config.data-id=${spring.application.name}.yaml
