封装RabbitMQ Starter：pangu-rabbitmq-spring-boot-starter。增加相关范例。编写使用文档。

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<module>pangu-dubbo-spring-boot-starter</module>
 		<module>pangu-gateway-spring-boot-starter</module>
 		<module>pangu-web-spring-boot-starter</module>
+		<module>pangu-rabbitmq-spring-boot-starter</module>
 		<module>pangu-generator-maven-plugin</module>
 	</modules>
 
