--- a/pangu-examples/pom.xml
+++ b/pangu-examples/pom.xml
@@ -28,6 +28,8 @@
 		<module>pangu-examples-webapi-local-service-based</module>
 		<module>pangu-examples-webapi-dubbo-service-based</module>
 		<module>pangu-examples-webapi-gateway-based</module>
+		<module>pangu-examples-mq-rabbitmq-sender</module>
+		<module>pangu-examples-mq-rabbitmq-receiver</module>
 	</modules>
 
 </project>
