封装RabbitMQ Starter：pangu-rabbitmq-spring-boot-starter。增加相关范例。编写使用文档。

--- a/pangu-examples/pom.xml
+++ b/pangu-examples/pom.xml
@@ -30,6 +30,7 @@
 		<module>pangu-examples-webapi-gateway-based</module>
 		<module>pangu-examples-mq-rabbitmq-sender</module>
 		<module>pangu-examples-mq-rabbitmq-receiver</module>
+		<module>pangu-examples-seata-at</module>
 	</modules>
 
 </project>
