--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<module>pangu-gateway-spring-boot-starter</module>
 		<module>pangu-web-spring-boot-starter</module>
 		<module>pangu-rabbitmq-spring-boot-starter</module>
+		<module>pangu-seata-spring-boot-starter</module>
 		<module>pangu-generator-maven-plugin</module>
 	</modules>
 
