--- a/pangu-examples/pangu-examples-crud/src/main/resources/application-dev.properties
+++ b/pangu-examples/pangu-examples-crud/src/main/resources/application-dev.properties
@@ -18,12 +18,11 @@ spring.application.name=pangu-examples-crud
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/pangu-examples?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/pangu-examples?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&rewriteBatchedStatements=true
 spring.datasource.username=root
 spring.datasource.password=root123456
 mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-# 分页SQL方言数据库类型标识（缺省：自动识别）
 pangu.jdbc.db-type=mysql
 
 logging.level.root=INFO
