--- a/pangu-examples/pangu-examples-seata-at/pangu-examples-seata-at-main/src/main/resources/application-dev.properties
+++ b/pangu-examples/pangu-examples-seata-at/pangu-examples-seata-at-main/src/main/resources/application-dev.properties
@@ -23,10 +23,13 @@ dubbo.consumer.timeout=5000
 dubbo.registry.address=nacos://${nacos.server-addr}?namespace=${nacos.namespace}
 dubbo.consumer.check=false
 
-seata.tx-service-group=my-tx-group
-seata.service.vgroup-mapping.my-tx-group=seata-server
-seata.service.grouplist.seata-server=127.0.0.1:8091
 seata.enabled=true
+seata.service.disable-global-transaction=false
+seata.tx-service-group=pangu-test-group
+seata.service.vgroup-mapping.pangu-test-group=seata-server
+seata.service.grouplist.seata-server=127.0.0.1:8091
+seata.config.type=file
+seata.registry.type=file
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
