--- a/pangu-examples/pom.xml
+++ b/pangu-examples/pom.xml
@@ -31,6 +31,7 @@
 		<module>pangu-examples-mq-rabbitmq-sender</module>
 		<module>pangu-examples-mq-rabbitmq-receiver</module>
 		<module>pangu-examples-seata-at</module>
+		<module>pangu-examples-shardingsphere-readwrite-splitting</module>
 	</modules>
 
 </project>
