编写文档《盘古框架文档（中文）排版指南》

--- a/pangu-website/blog/authors.yml
+++ b/pangu-website/blog/authors.yml
@@ -1,5 +1,5 @@
 xiongchun:
   name: xiongchun
-  title: Pangu Framework maintainer
+  title: Pangu Dev Framework maintainer
   url: https://gitee.com/xiong-chun
   image_url: https://portrait.gitee.com/uploads/avatars/user/143/431745_osworks_1597245496.png
