开发数据分片范例程序：pangu-examples-shardingsphere-sharding，编写数据分片文档

--- a/pangu-examples/pangu-examples-shardingsphere-readwrite-splitting/src/main/resources/application-dev.properties
+++ b/pangu-examples/pangu-examples-shardingsphere-readwrite-splitting/src/main/resources/application-dev.properties
@@ -40,12 +40,11 @@ spring.shardingsphere.datasource.ds-slave-1.jdbc-url=jdbc:mysql://localhost:3306
 spring.shardingsphere.datasource.ds-slave-1.username=root
 spring.shardingsphere.datasource.ds-slave-1.password=root123456
 
-# \u8BFB\u5199\u5206\u79BB\u7B56\u7565\u914D\u7F6E
 spring.shardingsphere.rules.readwrite-splitting.data-sources.pangu-rws.type=Static
 spring.shardingsphere.rules.readwrite-splitting.data-sources.pangu-rws.props.write-data-source-name=ds-master
 spring.shardingsphere.rules.readwrite-splitting.data-sources.pangu-rws.props.read-data-source-names=ds-slave-0,ds-slave-1
 spring.shardingsphere.rules.readwrite-splitting.load-balancers.read-random.type=RANDOM
-
+# spring.shardingsphere.rules.replica-query.data-sources.rw.query-consistent=true
 
 logging.level.root=INFO
 logging.level.com.gitee.pulanos.pangu=INFO
