增加数据分片（只分库）范例程序

--- a/pangu-examples/pangu-examples-shardingsphere-sharding/src/main/resources/application.properties
+++ b/pangu-examples/pangu-examples-shardingsphere-sharding/src/main/resources/application.properties
@@ -15,5 +15,10 @@
 # limitations under the License.
 #
 #spring.profiles.active=${spring.profiles.active:dev}
+
+# only sharding tables
 spring.profiles.active=sharding-tables
-#spring.profiles.active=sharding-databases
+# only sharding databases
+#spring.profiles.active=sharding-dbs
+# sharding databases & tables
+#spring.profiles.active=sharding-dbs
