增加数据分片（只分库）范例程序；优化读写分离范例程序

--- a/pangu-examples/pangu-examples-shardingsphere-sharding/src/main/resources/application-sharding-databases.properties
+++ b/pangu-examples/pangu-examples-shardingsphere-sharding/src/main/resources/application-sharding-databases.properties
@@ -21,7 +21,7 @@ mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 spring.shardingsphere.mode.type=Memory
 # print shardingsphere Actual SQL log
 spring.shardingsphere.props.sql-show=true
-spring.shardingsphere.datasource.names=ds-0
+spring.shardingsphere.datasource.names=ds-0,ds-1
 
 spring.shardingsphere.datasource.ds-0.type=com.zaxxer.hikari.HikariDataSource
 spring.shardingsphere.datasource.ds-0.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -29,14 +29,20 @@ spring.shardingsphere.datasource.ds-0.jdbc-url=jdbc:mysql://localhost:3306/pangu
 spring.shardingsphere.datasource.ds-0.username=root
 spring.shardingsphere.datasource.ds-0.password=root123456
 
+spring.shardingsphere.datasource.ds-1.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.ds-1.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.ds-1.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples-1?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&rewriteBatchedStatements=true
+spring.shardingsphere.datasource.ds-1.username=root
+spring.shardingsphere.datasource.ds-1.password=root123456
+
 # sharding table `t_order` configuration
-spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=ds-0.t_order$->{0..1}
-spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-column=order_id
-spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-algorithm-name=sa-0
+spring.shardingsphere.rules.sharding.default-database-strategy.standard.sharding-column=user_id
+spring.shardingsphere.rules.sharding.default-database-strategy.standard.sharding-algorithm-name=sa-0
+spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=ds-$->{0..1}.t_order
 
 # sharding-algorithms configuration
 spring.shardingsphere.rules.sharding.sharding-algorithms.sa-0.type=INLINE
-spring.shardingsphere.rules.sharding.sharding-algorithms.sa-0.props.algorithm-expression=t_order$->{order_id % 2}
+spring.shardingsphere.rules.sharding.sharding-algorithms.sa-0.props.algorithm-expression=ds-$->{user_id % 2}
 
 logging.level.root=INFO
 logging.level.com.gitee.pulanos.pangu=INFO
