--- a/pangu-examples/pangu-examples-shardingsphere-sharding/src/main/resources/application.properties
+++ b/pangu-examples/pangu-examples-shardingsphere-sharding/src/main/resources/application.properties
@@ -17,8 +17,8 @@
 #spring.profiles.active=${spring.profiles.active:dev}
 
 # only sharding tables
-spring.profiles.active=sharding-tables
+#spring.profiles.active=sharding-tables
 # only sharding databases
-#spring.profiles.active=sharding-dbs
+#spring.profiles.active=sharding-databases
 # sharding databases & tables
-#spring.profiles.active=sharding-dbs
+spring.profiles.active=sharding-databases-tables
