--- a/pangu-examples/pangu-examples-shardingsphere-readwrite-splitting/pom.xml
+++ b/pangu-examples/pangu-examples-shardingsphere-readwrite-splitting/pom.xml
@@ -55,12 +55,12 @@
             <plugin>
                 <groupId>com.gitee.pulanos.pangu</groupId>
                 <artifactId>pangu-generator-maven-plugin</artifactId>
-                <version>5.0.7</version>
+                <version>5.0.8</version>
                 <configuration>
                     <url>jdbc:mysql://127.0.0.1:3306/pangu-examples</url>
                     <user>root</user>
                     <password>root123456</password>
-                    <tables>user</tables>
+                    <tables>t_order</tables>
                     <author>普蓝开源社区</author>
                     <!-- 可以使用绝对路径 -->
                     <entityFilePath>${project.basedir}/src/main/java/com/gitee/pulanos/pangu/showcases/shardingsphere/dao/entity</entityFilePath>
