--- a/pangu-examples/pangu-examples-shardingsphere-readwrite-splitting/src/main/resources/application-dev.properties
+++ b/pangu-examples/pangu-examples-shardingsphere-readwrite-splitting/src/main/resources/application-dev.properties
@@ -19,7 +19,8 @@ spring.application.name=pangu-examples-shardingsphere-readwrite-splitting
 mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
-
+# print shardingsphere Actual SQL log
+spring.shardingsphere.props.sql-show=true
 spring.shardingsphere.datasource.names=ds-master,ds-slave-0,ds-slave-1
 
 spring.shardingsphere.datasource.ds-master.type=com.zaxxer.hikari.HikariDataSource
@@ -30,13 +31,13 @@ spring.shardingsphere.datasource.ds-master.password=root123456
 
 spring.shardingsphere.datasource.ds-slave-0.type=com.zaxxer.hikari.HikariDataSource
 spring.shardingsphere.datasource.ds-slave-0.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.ds-slave-0.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples-0?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&rewriteBatchedStatements=true
+spring.shardingsphere.datasource.ds-slave-0.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples-1?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&rewriteBatchedStatements=true
 spring.shardingsphere.datasource.ds-slave-0.username=root
 spring.shardingsphere.datasource.ds-slave-0.password=root123456
 
 spring.shardingsphere.datasource.ds-slave-1.type=com.zaxxer.hikari.HikariDataSource
 spring.shardingsphere.datasource.ds-slave-1.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.ds-slave-1.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples-1?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&rewriteBatchedStatements=true
+spring.shardingsphere.datasource.ds-slave-1.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples-2?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&rewriteBatchedStatements=true
 spring.shardingsphere.datasource.ds-slave-1.username=root
 spring.shardingsphere.datasource.ds-slave-1.password=root123456
 
