--- a/pangu-examples/pangu-examples-webapi-gateway-based/pom.xml
+++ b/pangu-examples/pangu-examples-webapi-gateway-based/pom.xml
@@ -22,8 +22,20 @@
             <artifactId>pangu-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.gitee.pulanos.pangu</groupId>
-            <artifactId>pangu-gateway-spring-boot-starter</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shenyu</groupId>
+            <artifactId>shenyu-spring-boot-starter-gateway</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shenyu</groupId>
+            <artifactId>shenyu-spring-boot-starter-sync-data-websocket</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shenyu</groupId>
+            <artifactId>shenyu-spring-boot-starter-plugin-apache-dubbo</artifactId>
         </dependency>
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
