--- a/pangu-examples/pangu-examples-webapi-dubbo-service-based/pom.xml
+++ b/pangu-examples/pangu-examples-webapi-dubbo-service-based/pom.xml
@@ -24,6 +24,7 @@
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
             <artifactId>pangu-web-spring-boot-starter</artifactId>
+            <version>5.2.0</version>
         </dependency>
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
