--- a/pangu-website/blog/authors.yml
+++ b/pangu-website/blog/authors.yml
@@ -2,4 +2,4 @@ xiongchun:
   name: xiongchun
   title: Pangu Dev Framework maintainer
   url: https://gitee.com/xiong-chun
-  image_url: https://portrait.gitee.com/uploads/avatars/user/143/431745_xiong-chun_1648795896.png
+  image_url: /pangu-framework/resources/author/xiongchun.png
