修正MP日志自定义问题

--- a/pangu-examples/pangu-examples-shardingsphere-sharding/src/main/resources/application-sharding-tables.properties
+++ b/pangu-examples/pangu-examples-shardingsphere-sharding/src/main/resources/application-sharding-tables.properties
@@ -16,7 +16,7 @@
 #
 spring.application.name=pangu-examples-shardingsphere-sharding
 mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.slf4j.Slf4jImpl
 
 spring.shardingsphere.mode.type=Memory
 # print shardingsphere Actual SQL log
