--- a/pangu-examples/pangu-examples-webapi-local-service-based/src/main/resources/application-dev.properties
+++ b/pangu-examples/pangu-examples-webapi-local-service-based/src/main/resources/application-dev.properties
@@ -24,7 +24,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/pangu-examples?useUnicode=true
 spring.datasource.username=root
 spring.datasource.password=root123456
 mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.slf4j.Slf4jImpl
 # \u5206\u9875SQL\u65B9\u8A00\u6570\u636E\u5E93\u7C7B\u578B\u6807\u8BC6\uFF08\u7F3A\u7701\uFF1A\u81EA\u52A8\u8BC6\u522B\uFF09
 pangu.jdbc.db-type=mysql
 
