--- a/pangu-examples/pangu-examples-crud/src/main/resources/application-dev.properties
+++ b/pangu-examples/pangu-examples-crud/src/main/resources/application-dev.properties
@@ -22,7 +22,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/pangu-examples?useUnicode=true
 spring.datasource.username=root
 spring.datasource.password=root123456
 mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.slf4j.Slf4jImpl
 pangu.jdbc.db-type=mysql
 
 logging.level.root=INFO
