--- a/pangu-examples/pangu-examples-dubbo-service/pom.xml
+++ b/pangu-examples/pangu-examples-dubbo-service/pom.xml
@@ -30,6 +30,10 @@
             <artifactId>pangu-examples-dubbo-api</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
