--- a/pangu-examples/pangu-examples-crud/src/main/resources/application-dev.properties
+++ b/pangu-examples/pangu-examples-crud/src/main/resources/application-dev.properties
@@ -25,5 +25,6 @@ mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.slf4j.Slf4jImpl
 pangu.jdbc.db-type=mysql
 
+logging.file.name=logs/pangu.log
 logging.level.root=INFO
 logging.level.com.gitee.pulanos.pangu=INFO
