角色管理 模块相关代码

--- a/pangu-admin/pangu-admin-backend/pangu-admin-system/pangu-admin-system-app/src/main/resources/application-dev.properties
+++ b/pangu-admin/pangu-admin-backend/pangu-admin-system/pangu-admin-system-app/src/main/resources/application-dev.properties
@@ -31,8 +31,8 @@ spring.datasource.password=root123456
 mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.slf4j.Slf4jImpl
 mybatis-plus.global-config.db-config.logic-delete-field=deleted
-mybatis-plus.global-config.db-config.logic-delete-value=1
 mybatis-plus.global-config.db-config.logic-not-delete-value=0
+mybatis-plus.global-config.db-config.logic-delete-value=id
 
 
 pangu.jdbc.db-type=mysql
