--- a/pangu-admin/pangu-admin-backend/pangu-admin-system/pangu-admin-system-app/src/main/resources/application-dev.properties
+++ b/pangu-admin/pangu-admin-backend/pangu-admin-system/pangu-admin-system-app/src/main/resources/application-dev.properties
@@ -39,5 +39,5 @@ pangu.jdbc.db-type=mysql
 
 logging.file.name=logs/pangu.log
 logging.level.root=INFO
-logging.level.com.gitee.pulanos.pangu=info
-logging.level.com.pulanit.pangu.admin.system.dao=debug
+logging.level.com.gitee.pulanos.pangu=INFO
+logging.level.com.pulanit.pangu.admin.system.dao=DEBUG
