--- a/pangu-admin/pangu-admin-backend/pangu-admin-system/pom.xml
+++ b/pangu-admin/pangu-admin-backend/pangu-admin-system/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.gitee.pulanos.pangu</groupId>
-	<artifactId>pangu-admin-auth</artifactId>
+	<artifactId>pangu-admin-system</artifactId>
 	<packaging>pom</packaging>
 	<version>1.0.0</version>
 	<name>pangu-admin-system</name>
