--- a/pangu-admin/pangu-admin-frontend/.env.production
+++ b/pangu-admin/pangu-admin-frontend/.env.production
@@ -2,7 +2,7 @@
 NODE_ENV = production
 
 # 标题
-VUE_APP_TITLE = SCUI
+VUE_APP_TITLE = 盘古 Admin
 
 # 接口地址
 VUE_APP_API_BASEURL = https://www.fastmock.site/mock/5039c4361c39a7e3252c5b55971f1bd3/api
