--- a/pangu-admin/pangu-admin-backend/pangu-admin-web/src/main/resources/application-dev.properties
+++ b/pangu-admin/pangu-admin-backend/pangu-admin-web/src/main/resources/application-dev.properties
@@ -14,7 +14,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-spring.application.name=pangu-examples-webapi-dubbo-service-based
+spring.application.name=pangu-admin-web
 
 spring.jackson.time-zone=GMT+8
 
@@ -25,6 +25,10 @@ dubbo.protocol.port=-1
 dubbo.consumer.timeout=5000
 dubbo.registry.address=nacos://${nacos.server-addr}?namespace=${nacos.namespace}
 dubbo.consumer.check=false
+
+app.jwt.secret-key=alliswell666
+app.jwt.ttl-min=60*24*30
+app.jwt.persistent=true
 
 logging.level.root=INFO
 logging.level.com.gitee.pulanos.pangu=INFO
