admin 模块 JWT 完善

--- a/pangu-admin/pangu-admin-backend/pangu-admin-web/src/main/resources/application-dev.properties
+++ b/pangu-admin/pangu-admin-backend/pangu-admin-web/src/main/resources/application-dev.properties
@@ -27,7 +27,7 @@ dubbo.registry.address=nacos://${nacos.server-addr}?namespace=${nacos.namespace}
 dubbo.consumer.check=false
 
 app.jwt.secret-key=alliswell666
-app.jwt.ttl-min=60*24*30
+app.jwt.ttl-min=480
 app.jwt.persistent=true
 
 logging.level.root=INFO
