代码重构，抽取 pangu-admin-common 模块

--- a/pangu-admin/pangu-admin-backend/pangu-admin-system/pangu-admin-system-app/pom.xml
+++ b/pangu-admin/pangu-admin-backend/pangu-admin-system/pangu-admin-system-app/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>pangu-admin-system-api</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.gitee.pulanos.pangu</groupId>
+            <artifactId>pangu-admin-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
