--- a/pangu-admin/pangu-admin-backend/pangu-admin-web/pom.xml
+++ b/pangu-admin/pangu-admin-backend/pangu-admin-web/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>pangu-admin-system-api</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.gitee.pulanos.pangu</groupId>
+            <artifactId>pangu-admin-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
