--- a/pangu-admin/pangu-admin-backend/pangu-admin-system/pangu-admin-system-api/pom.xml
+++ b/pangu-admin/pangu-admin-backend/pangu-admin-system/pangu-admin-system-api/pom.xml
@@ -58,6 +58,12 @@
             <version>${pangu.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.gitee.pulanos.pangu</groupId>
+            <artifactId>pangu-admin-common</artifactId>
+            <version>1.0.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
