调整状态码数据类型  int->String

--- a/pangu-admin/pangu-admin-backend/pangu-admin-system/pangu-admin-system-app/src/main/resources/application-dev.properties
+++ b/pangu-admin/pangu-admin-backend/pangu-admin-system/pangu-admin-system-app/src/main/resources/application-dev.properties
@@ -21,6 +21,7 @@ dubbo.protocol.port=-1
 dubbo.consumer.timeout=5000
 dubbo.registry.address=nacos://${nacos.server-addr}?namespace=${nacos.namespace}
 dubbo.consumer.check=false
+dubbo.provider.filter=-exception
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
