--- a/pangu-admin/pangu-admin-backend/pangu-admin-web/src/main/resources/application-dev.properties
+++ b/pangu-admin/pangu-admin-backend/pangu-admin-web/src/main/resources/application-dev.properties
@@ -30,6 +30,11 @@ app.jwt.secret-key=alliswell666
 app.jwt.ttl-min=480
 app.jwt.persistent=true
 
+app.log.queue.producer.disabled=false
+#app.log.queue.producer.excludes.method-start-with=list,find,select,query,read
+app.log.queue.consumer.pool.threads=10
+
 logging.level.root=INFO
 logging.level.com.gitee.pulanos.pangu=INFO
 logging.level.com.alibaba.nacos.client.config.impl.ClientWorker=WARN
+logging.level.com.yomahub.tlog.dubbo.filter=ERROR
