--- a/pangu-website/blog/authors.yml
+++ b/pangu-website/blog/authors.yml
@@ -2,4 +2,4 @@ xiongchun:
   name: xiongchun
   title: Pangu Dev Framework maintainer
   url: https://gitee.com/xiong-chun
-  image_url: resources/xiongchun.png
+  image_url: img/xiongchun.png
