--- a/pangu-admin/pangu-admin-backend/pangu-admin-system/pangu-admin-system-api/pom.xml
+++ b/pangu-admin/pangu-admin-backend/pangu-admin-system/pangu-admin-system-api/pom.xml
@@ -7,17 +7,17 @@
     <groupId>com.gitee.pulanos.pangu</groupId>
     <artifactId>pangu-admin-system-api</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0</version>
+    <version>5.3.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <pangu.version>5.3.0</pangu.version>
         <lombok.version>1.18.20</lombok.version>
         <mybatis-plus.version>3.5.2</mybatis-plus.version>
         <jackson-annotations.version>2.10.2</jackson-annotations.version>
         <jakarta.validation-api.version>2.0.2</jakarta.validation-api.version>
         <hutool-core.version>5.8.3</hutool-core.version>
-        <pangu.version>5.2.0</pangu.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     </properties>
 
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
             <artifactId>pangu-admin-common</artifactId>
-            <version>1.0.0</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
