--- a/pangu-admin/pangu-admin-backend/pangu-admin-web/pom.xml
+++ b/pangu-admin/pangu-admin-backend/pangu-admin-web/pom.xml
@@ -7,14 +7,14 @@
     <parent>
         <groupId>com.gitee.pulanos.pangu</groupId>
         <artifactId>pangu-parent</artifactId>
-        <version>5.2.0</version>
+        <version>5.3.0</version>
         <relativePath/>
     </parent>
 
     <groupId>com.gitee.pulanos.pangu</groupId>
     <artifactId>pangu-admin-web</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0</version>
+    <version>5.3.0</version>
 
     <dependencies>
         <dependency>
@@ -32,12 +32,12 @@
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
             <artifactId>pangu-admin-system-api</artifactId>
-            <version>1.0.0</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
             <artifactId>pangu-admin-common</artifactId>
-            <version>1.0.0</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
