--- a/pangu-examples/pangu-examples-webapi-local-service-based/pom.xml
+++ b/pangu-examples/pangu-examples-webapi-local-service-based/pom.xml
@@ -7,14 +7,14 @@
     <parent>
         <groupId>com.gitee.pulanos.pangu</groupId>
         <artifactId>pangu-parent</artifactId>
-        <version>5.2.0</version>
+        <version>5.3.0</version>
         <relativePath/>
     </parent>
 
     <groupId>com.gitee.pulanos.pangu</groupId>
     <artifactId>pangu-examples-webapi-local-service-based</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0</version>
+    <version>5.3.0</version>
 
     <dependencies>
         <dependency>
@@ -53,7 +53,7 @@
             <plugin>
                 <groupId>com.gitee.pulanos.pangu</groupId>
                 <artifactId>pangu-generator-maven-plugin</artifactId>
-                <version>5.0.7</version>
+                <version>5.3.0</version>
                 <configuration>
                     <url>jdbc:mysql://127.0.0.1:3306/pangu-examples</url>
                     <user>root</user>
@@ -62,9 +62,9 @@
                     <author>普蓝开源社区</author>
                     <!-- 可以使用绝对路径 -->
                     <entityFilePath>${project.basedir}/src/main/java/com/gitee/pulanos/pangu/showcases/webapi/local/dao/entity</entityFilePath>
-                    <entityPackageName>com.gitee.pulanos.pangu.showcases.webapi.local.dao.entity</entityPackageName>
+                    <entityFilePath>com.gitee.pulanos.pangu.showcases.webapi.local.dao.entity</entityFilePath>
                     <mapperFilePath>${project.basedir}/src/main/java/com/gitee/pulanos/pangu/showcases/webapi/local/dao/mapper</mapperFilePath>
-                    <mapperPackageName>com.gitee.pulanos.pangu.showcases.webapi.local.dao.mapper</mapperPackageName>
+                    <mapperFilePath>com.gitee.pulanos.pangu.showcases.webapi.local.dao.mapper</mapperFilePath>
                 </configuration>
             </plugin>
         </plugins>
