--- a/pangu-app-starter/manifest.json
+++ b/pangu-app-starter/manifest.json
@@ -1,7 +1,7 @@
 {
     "name" : "盘古 APP Starter",
     "appid" : "__UNI__F9497E9",
-    "description" : "盘古移动端多平台开发脚手架",
+    "description" : "盘古移动端多平台快速开发脚手架",
     "versionName" : "1.0.0",
     "versionCode" : 1,
     "transformPx" : false,
@@ -55,7 +55,8 @@
                 "abiFilters" : [ "armeabi-v7a", "arm64-v8a" ]
             },
             "ios" : {
-                "idfa" : false
+                "idfa" : false,
+                "dSYMs" : false
             },
             "sdkConfigs" : {
                 "ad" : {}
@@ -99,7 +100,7 @@
     },
     "quickapp" : {},
     "mp-weixin" : {
-        "appid" : "",
+        "appid" : "wx28956dec32955974",
         "setting" : {
             "urlCheck" : false,
             "es6" : false,
@@ -140,7 +141,7 @@
                 "enable" : false
             }
         },
-        "title" : "盘古移动端多平台开发框架",
+        "title" : "盘古移动端多平台快速开发脚手架（盘古开发框架旗下生态项目）",
         "sdkConfigs" : {
             "maps" : {
                 "qqmap" : {
