盘古 APP Starter 对微信小程序兼容性的调整。

--- a/pangu-app-starter/manifest.json
+++ b/pangu-app-starter/manifest.json
@@ -100,11 +100,11 @@
     },
     "quickapp" : {},
     "mp-weixin" : {
-        "appid" : "wx28956dec32955974",
+        "appid" : "wx21873da36299cd04",
         "setting" : {
             "urlCheck" : false,
             "es6" : false,
-            "minified" : false,
+            "minified" : true,
             "postcss" : false
         },
         "optimization" : {
