--- a/pangu-examples/pangu-examples-webapi-local-service-based/src/main/resources/application-dev.properties
+++ b/pangu-examples/pangu-examples-webapi-local-service-based/src/main/resources/application-dev.properties
@@ -30,3 +30,4 @@ pangu.jdbc.db-type=mysql
 
 logging.level.root=INFO
 logging.level.com.gitee.pulanos.pangu=INFO
+logging.level.com.gitee.pulanos.pangu.showcases.webapi.local.dao=DEBUG
