--- a/pangu-examples/pangu-examples-config-remote-nacos/src/main/resources/application.properties
+++ b/pangu-examples/pangu-examples-config-remote-nacos/src/main/resources/application.properties
@@ -19,8 +19,10 @@ spring.profiles.active=${spring.profiles.active:dev}
 nacos.config.bootstrap.enable=true
 nacos.config.bootstrap.log-enable=true
 nacos.config.auto-refresh=true
-nacos.config.namespace=${nacos.namespace}
+nacos.config.namespace=${nacos.namespace:dev}
 nacos.config.server-addr=${nacos.server-addr:127.0.0.1:8848}
+nacos.config.username=${nacos.username:nacos}
+nacos.config.password=${nacos.password:nacos}
 # properties | yaml | json | ...
 nacos.config.type=properties
 nacos.config.data-id=${spring.application.name}
